Fix mongo usage
